Two sided greedy switch working but not integrated yet.